--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
 <p>This is a post example to query:</p>
 
-<p><code>https://api.moonxbt.com/v1/xxx/post</code></p>
+<p><code>https://v2.api.moolecloud.com/api/xxx/post</code></p>
 
 <pre>
 {
