--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
           </li>
       </ul>
         <ul class="toc-footer">
-            <li><a href='https://v2.api.moonxbt.com'>SnapEx</a></li>
+            <li><a href='https://v2.api.moonxbt.com'>MoonXBT</a></li>
         </ul>
     </div>
     <div class="page-wrapper">
@@ -414,7 +414,7 @@
 <h1 id='general-info'>General Info</h1><h2 id='general-api-information'>General API Information</h2>
 <ul>
 <li>Some endpoints will require an API Key. </li>
-<li>The base endpoint is: <code>https://www.snapex.com</code></li>
+<li>The base endpoint is: <code>https://www.MoonXBT.com</code></li>
 <li>All endpoints return either a JSON object or array.</li>
 <li>Data is returned in ascending order. Oldest first, newest last.</li>
 <li>All time and timestamp related fields are in milliseconds.</li>
@@ -423,7 +423,7 @@
 <ul>
 <li>HTTP 200 OK</li>
 <li>HTTP 4XX return codes are used for malformed requests; the issue is on the sender&#39;s side.</li>
-<li>HTTP 5XX return codes are used for internal errors; the issue is on SnapEx&#39;s side.</li>
+<li>HTTP 5XX return codes are used for internal errors; the issue is on MoonXBT&#39;s side.</li>
 </ul>
 <h2 id='general-information-on-endpoints'>General Information on Endpoints</h2>
 <ul>
@@ -1387,7 +1387,7 @@
 
 <p>This WebSocket returns a list of K-lines history data for all public users.</p>
 
-<p><strong>WebSocket Path</strong>: wss://www.snapex.com/ws/v1/kline</p>
+<p><strong>WebSocket Path</strong>: wss://www.MoonXBT.com/ws/v1/kline</p>
 
 <aside class="notice">
 The WebSocket server will check the idle connections every 60 seconds. If the WebSocket server does not receive any request frame from the connection within a 1 minute period, the connection will be disconnected. Unsolicited request frames are not allowed.
