modify some anotation in order entity

--- a/index.html
+++ b/index.html
@@ -2710,7 +2710,7 @@ The WebSocket server will check the idle connections every 60 seconds. If the We
 </tr>
 <tr>
 <td>type</td>
-<td>ECFDOrderType</td>
+<td>CFD Order Type</td>
 <td>integer</td>
 </tr>
 <tr>
