--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 <h1 id='general-info'>General Info</h1><h2 id='general-api-information'>General API Information</h2>
 <ul>
 <li>Some endpoints will require an API Key. </li>
-<li>The base endpoint is: https://v2.api.moonxbt.com``</li>
+<li>The base endpoint is: https://v2.api.moonxbt.com</li>
 <li>All endpoints return either a JSON object or array.</li>
 <li>Data is returned in ascending order. Oldest first, newest last.</li>
 <li>All time and timestamp related fields are in milliseconds.</li>
