--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                             <a href="#spots-trade-endpoint" class="toc-h3 toc-link" data-title="Spots Trade Endpoint">Spots Trade Endpoint</a>
                               <ul class="toc-list-h4">
                                   <li>
-                                    <a href="#createopenorder" class="toc-h4 toc-link" data-title="CreateOpenOrder">CreateOpenOrder</a>
+                                    <a href="#create-open-order" class="toc-h4 toc-link" data-title="Create Open Order">Create Open Order</a>
                                   </li>
                                   <li>
                                     <a href="#batch-cancel" class="toc-h4 toc-link" data-title="Batch Cancel">Batch Cancel</a>
@@ -1300,7 +1300,7 @@
 <td>String</td>
 </tr>
 </tbody></table>
-<h3 id='spots-trade-endpoint'>Spots Trade Endpoint</h3><h4 id='createopenorder'>CreateOpenOrder</h4>
+<h3 id='spots-trade-endpoint'>Spots Trade Endpoint</h3><h4 id='create-open-order'>Create Open Order</h4>
 <p>Open one order</p>
 
 <p><strong>Request Path</strong>: <code>POST /api/endpoint</code></p>
