--- a/index.html
+++ b/index.html
@@ -1311,7 +1311,7 @@
     </span><span class="nl">"method"</span><span class="p">:</span><span class="s2">"spots:createOrder"</span><span class="p">,</span><span class="w">
     </span><span class="nl">"jsonrpc"</span><span class="p">:</span><span class="s2">"2.0"</span><span class="p">,</span><span class="w">
     </span><span class="nl">"params"</span><span class="p">:{</span><span class="w">
-        </span><span class="nl">"orderBean"</span><span class="p">:{</span><span class="w">
+        </span><span class="nl">"order"</span><span class="p">:{</span><span class="w">
             </span><span class="nl">"direction"</span><span class="p">:</span><span class="s2">"LONG"</span><span class="p">,</span><span class="w">
             </span><span class="nl">"type"</span><span class="p">:</span><span class="s2">"LIMIT"</span><span class="p">,</span><span class="w">
             </span><span class="nl">"source"</span><span class="p">:</span><span class="s2">"WEB"</span><span class="p">,</span><span class="w">
